--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>
+      {% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}
+    </title>
+    <meta name="author" content="Luke Chadwick" />
+    <meta
+      name="description"
+      content="{% if page.meta_description %}{{ page.meta_description }}{% else %}{{ site.description }}{% endif %}"
+    />
+    <link rel="stylesheet" href="/assets/css/styles-compiled.css" />
   </head>
   <body>
     {{ content }}
